# hw04-Group11

./: .buildinfo  LOSC_Event_tutorial.html  LOSC_Event_tutorial.ipynb  Makefile  README.html  README.md  _config.yml  _toc.yml  contribution_statement.html  contribution_statement.md  genindex.html  hw04_description.html  intro.html  notebooks.html  objects.inv  requirements.txt  search.html  searchindex.js  updated_LOSC_Event_tutorial.html  updated_LOSC_Event_tutorial.ipynb
.github/workflows/: book.yml
.gitignore/: exit
JupterBook/_build/.doctrees/: environment.pickle  (+4 more)
_build.8b7a5f20-c686-4b04-a83b-51552f640e1f/.doctrees/: LOSC_Event_tutorial.doctree  intro.doctree  notebooks.doctree
_build.8b7a5f20-c686-4b04-a83b-51552f640e1f/html/: .buildinfo  markdown-notebooks.html  notebooks.html  searchindex.js
_build.8b7a5f20-c686-4b04-a83b-51552f640e1f/jupyter_execute/: markdown-notebooks.ipynb
_build/.doctrees/: LOSC_Event_tutorial.doctree  README.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  intro.doctree  notebooks.doctree  updated_LOSC_Event_tutorial.doctree
_build/html/: LOSC_Event_tutorial.html  README.html  contribution_statement.html  intro.html  notebooks.html  objects.inv  search.html  searchindex.js  updated_LOSC_Event_tutorial.html
_build/jupyter_execute/: LOSC_Event_tutorial.ipynb  notebooks.ipynb  updated_LOSC_Event_tutorial.ipynb
_sources/: README.md  contribution_statement.md
data/: GW150914_data.csv
ligotools/: __init__.py  setup.cfg  utils.py
ligotools/tests/: test_utils.py  tests_readligo.py
(+30 files in other folders)
