# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Group 11 (Janet Choe, Henry Lam, Daniel Richards, Kanglin He)
author_email     = janetchoe@berkeley.edu, kanglin@berkeley.edu, dnevinrichards@berkeley.edu, hlam0125@berkeley.edu
description      = Provides tools for reading LIGO data files
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, LIGO
license          = BSD 3-Clause License
classifiers      =
    Programming Language :: Python :: 2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.8.0 
install_requires =
    numpy == 1.23
    scipy == 1.8
    matplotlib == 3.5
    h5py == 3.7

[options.packages.find]
exclude =
    examples*
    docs*
    # ligotools.tests*